--- a/css/stylesDesk.css
+++ b/css/stylesDesk.css
@@ -45,6 +45,7 @@ html {
 /* componente */
 body {
   width: 100%;
+  height: 100vh;
   background: linear-gradient(180deg, #af67e9 0%, #6565e7 100%);
 }
 
@@ -123,7 +124,7 @@ body {
   align-items: center;
   justify-content: space-between;
   margin-bottom: 15px;
-  color: #4a4b5e;
+  color: #787887;
   font-size: 1.2rem;
   font-weight: bold;
   text-decoration: none;
@@ -149,17 +150,16 @@ body {
 
 body {
   height: 100vh;
-  display: flex;
 }
 
 .container {
-  width: 90%;
-  min-height: 764px;
+  width: 75%;
+  min-height: 500px;
+  margin-top: 25vh;
   grid-template-columns: repeat(2, 50%);
-  grid-template-rows: 764px;
+  grid-template-rows: 500px;
   grid-template-areas: "Hero questions";
-  align-self: center;
-  align-items: center;
+  align-content: center;
   background-color: #FFF;
   border-radius: 30px;
 }
@@ -187,9 +187,9 @@ body {
   height: 100%;
   background-image: url(../images/bg-pattern-desktop.svg);
   background-repeat: no-repeat;
-  background-size: 246%;
-  background-position-x: -954px;
-  background-position-y: -445px;
+  background-size: 200%;
+  background-position-x: -662px;
+  background-position-y: -334px;
   position: relative;
   overflow: hidden;
 }
@@ -199,11 +199,11 @@ body {
   width: 100%;
 }
 .container__imgsDesk__box {
-  max-width: 80px;
-  max-height: 80px;
+  max-width: 100px;
+  max-height: 100px;
   position: absolute;
-  left: -33px;
-  top: 368px;
+  left: -74px;
+  top: 216px;
 }
 .container__acordion {
   align-items: end;
