--- a/css/stylesDesk.css
+++ b/css/stylesDesk.css
@@ -21,7 +21,7 @@ html {
 
 /* --------Icons------------ */
 .arrowdonw, .container__acordion__items__questions__icon, .arrowUP {
-  background-image: url("/images/icon-arrow-down.svg");
+  background-image: url("https://raw.githubusercontent.com/Frankiiize/accordionFrontenMentor/5eb2ebd1f06a7cde887014cc78edd82ae5ae7e1d/images/icon-arrow-down.svg");
   background-repeat: no-repeat;
   background-size: contain;
   width: 15px;
@@ -155,7 +155,7 @@ body {
 .container {
   width: 75%;
   min-height: 500px;
-  margin-top: 25vh;
+  margin-top: 10vh;
   grid-template-columns: repeat(2, 50%);
   grid-template-rows: 500px;
   grid-template-areas: "Hero questions";
