--- a/css/stylesDesk.css
+++ b/css/stylesDesk.css
@@ -47,6 +47,8 @@ body {
   width: 100%;
   height: 100vh;
   background: linear-gradient(180deg, #af67e9 0%, #6565e7 100%);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .container {
